--- a/index.html
+++ b/index.html
@@ -87,6 +87,10 @@ body {
   width: 100%;
   padding: 20px;
 } */
+  .img{
+    height:245px;
+    widhth:245px;
+  }
 
 /* Footer */
 .footer {
@@ -126,7 +130,7 @@ body {
   <div class="side">
     <h2>About Me</h2>
     <h5>Photo of me:</h5>
-    <div class="fakeimg"><img src="prateek.jpeg" alt="myimg" height="100px"></div>
+    <div class="fakeimg"><img src="prateek.jpeg" class="img" alt="myimg" height="100px"></div>
     <p>A motivated <span>Competative programmer</span> with keen interest in web development & <br> grippinghard the data structure concepts. A strategic and agile thinker known for <br> driving change by tackling ambiguous problems and effectively communicating solutions.</p>
   </div>
   <div class="main">
